# jemo

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  config.yaml  jemo.spec  pyproject.toml
src/: cli.py
src/jemo/: __init__.py  cli.py  config.py  jemo.py  utils.py
src/jemo/plugins/: __init__.py  base.py  command_line_plugin.py  dummy_plugin.py  http_plugin.py
src/jemo/simple_http_server/: __main__.py
